--- a/package.json
+++ b/package.json
@@ -1,42 +1,37 @@
 {
-  "name": "fishingpage",
-  "version": "1.0.0",
-  "description": "",
-  "main": "webpack.config.js",
+  "name": "react-typescript-material-ui-form",
+  "version": "0.1.0",
+  "private": true,
   "dependencies": {
-    "clean-webpack-plugin": "^3.0.0",
-    "react": "^16.12.0",
-    "react-dom": "^16.12.0",
-    "source-map-loader": "^0.2.4",
-    "ts-loader": "^6.2.1",
-    "webpack-cli": "^3.3.10",
-    "webpack-validator": "^3.0.1"
-  },
-  "devDependencies": {
-    "@babel/core": "^7.2.2",
-    "@babel/preset-env": "^7.3.1",
-    "@types/react": "^16.9.14",
-    "@types/react-dom": "^16.9.4",
-    "awesome-typescript-loader": "^5.2.1",
-    "babel-loader": "^8.0.5",
-    "html-webpack-plugin": "^3.2.0",
-    "typescript": "^3.7.2",
-    "webpack": "^4.41.2",
-    "webpack-cli": "^3.2.1",
-    "webpack-dev-server": "^3.1.4",
-    "webpack-merge": "^4.2.2"
+    "@material-ui/core": "^3.9.4",
+    "@material-ui/icons": "^3.0.2",
+    "@material-ui/styles": "^4.7.1",
+    "@types/jest": "24.0.11",
+    "@types/node": "11.13.4",
+    "@types/react": "16.8.13",
+    "@types/react-dom": "16.8.4",
+    "formik": "^1.5.2",
+    "react": "^16.8.6",
+    "react-dom": "^16.8.6",
+    "react-scripts": "2.1.8",
+    "typescript": "3.4.3"
   },
   "scripts": {
-    "start": "webpack-dev-server --open --config webpack.dev.js"
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/eydrianJS/fishing-page.git"
+  "eslintConfig": {
+    "extends": "react-app"
   },
-  "author": "",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/eydrianJS/fishing-page/issues"
-  },
-  "homepage": "https://github.com/eydrianJS/fishing-page#readme"
+  "browserslist": [
+    ">0.2%",
+    "not dead",
+    "not ie <= 11",
+    "not op_mini all"
+  ],
+  "devDependencies": {
+    "@types/material-ui": "^0.21.6"
+  }
 }
