--- a/package.json
+++ b/package.json
@@ -21,11 +21,15 @@
     "babel-loader": "^8.0.6",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
+    "react-gesture-gallery": "^1.1.0",
+    "react-gesture-responder": "^2.1.0",
+    "source-map-loader": "^0.2.4",
     "webpack": "^4.41.2",
     "webpack-cli": "^3.3.10",
-    "webpack-dev-server": "^3.9.0"
+    "webpack-dev-server": "^3.9.0",
+    "webpack-node-externals": "^1.7.2"
   },
   "devDependencies": {
-    "url-loader": "^3.0.0"
+    "file-loader": "^5.0.2"
   }
 }
