--- a/package.json
+++ b/package.json
@@ -21,8 +21,7 @@
     "babel-loader": "^8.0.6",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
-    "react-gesture-gallery": "^1.1.0",
-    "react-gesture-responder": "^2.1.0",
+    "react-items-carousel": "^2.8.0",
     "source-map-loader": "^0.2.4",
     "webpack": "^4.41.2",
     "webpack-cli": "^3.3.10",
@@ -30,6 +29,8 @@
     "webpack-node-externals": "^1.7.2"
   },
   "devDependencies": {
-    "file-loader": "^5.0.2"
+    "css-loader": "^3.3.0",
+    "file-loader": "^5.0.2",
+    "style-loader": "^1.0.1"
   }
 }
