--- a/package.json
+++ b/package.json
@@ -19,9 +19,12 @@
     "@types/react": "^16.9.16",
     "@types/react-dom": "^16.9.4",
     "babel-loader": "^8.0.6",
+    "nuka-carousel": "^4.5.13",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-items-carousel": "^2.8.0",
+    "react-slick": "^0.25.2",
+    "slick-carousel": "^1.8.1",
     "source-map-loader": "^0.2.4",
     "webpack": "^4.41.2",
     "webpack-cli": "^3.3.10",
